force-app/main/default/objects/Channel_Partner__c/Channel_Partner__c.object-meta.xml
<CustomObject>
    <label>Channel Partner</label>
    <pluralLabel>Channel Partners</pluralLabel>
    <nameField>
        <label>Channel Partner Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Distributor, Stockist, and C&amp;F Agent profiles with KYC and credit management (MOD-01 Master Data Management)</description>
</CustomObject>