force-app/main/default/objects/Channel_Partner__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <type>EncryptedText</type>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
</CustomField>