force-app/main/default/objects/Channel_Partner__c/fields/Credit_Available__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available__c</fullName>
    <label>Credit Available</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>Credit_Limit__c - Credit_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>