force-app/main/default/objects/Channel_Partner__c/fields/Credit_Used__c.field-meta.xml
<CustomField>
    <fullName>Credit_Used__c</fullName>
    <label>Credit Used</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>