force-app/main/default/objects/Channel_Partner__c/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <label>Partner Code</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>